--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -17,3 +17,5 @@ dependencies = [
 
 [tool.fawltydeps]
 actions = ["check_undeclared"]
+deps = ["scripts/pyproject.toml", "pyproject.toml"]
+code = ["scripts/boilercv_tools"]
