Sync project with own template and fix a few regressions

--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -18,4 +18,4 @@ dependencies = [
 [tool.fawltydeps]
 actions = ["check_undeclared"]
 deps = ["scripts/pyproject.toml", "pyproject.toml"]
-code = ["scripts/boilercv_tools"]
+code = ["scripts/{{ project_name }}_tools"]
