--- a/template/.renovaterc.json.jinja
+++ b/template/.renovaterc.json.jinja
@@ -2,7 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "description": "Establish base config, schedule, and manager defaults",
   "addLabels": ["deps"],
-  "extends": ["config:base", ":enablePreCommit", ":disableRateLimiting"],
+  "extends": ["config:base", "group:all", ":enablePreCommit"],
   "dependencyDashboardApproval": {% if active %}false{% else %}true{% endif %},
   "schedule": ["on the 16th day of the month"],
   "git-submodules": {
@@ -18,19 +18,5 @@
   "pip_requirements": {
     "description": "Additionally monitor these files",
     "fileMatch": ["(^|/)requirements/.+$"]
-  },
-  "packageRules": [
-    {
-      "description": "Core dependencies, unmmatched by the rules below",
-      "groupName": "core",
-      "matchPackagePatterns": ["*"],
-      "matchUpdateTypes": ["minor", "patch"]
-    },
-    {
-      "description": "Type checking dependencies",
-      "groupName": "type checking",
-      "matchManagers": ["pep621", "pip_requirements", "git-submodules"],
-      "matchPackageNames": ["pyright", "submodules/typings"]
-    }
-  ]
+  }
 }
