--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -13,7 +13,7 @@ dependencies = [
     "zstandard==0.22.0",
 ]
 [project.scripts]
-{{ project_name }}_tools = "{{ project_name }}_tools.__main__:main"
+"{{ project_name }}_tools" = "{{ project_name }}_tools.__main__:main"
 
 [tool.fawltydeps]
 actions = ["check_undeclared"]
