--- a/template/.github/workflows/high.yml.jinja
+++ b/template/.github/workflows/high.yml.jinja
@@ -8,6 +8,7 @@ defaults:
   run:
     shell: "pwsh"
 env:
+  UV_CACHE_DIR: ".cache/uv-cache"
   UV_SYSTEM_PYTHON: "true"
 jobs:
   test:
@@ -28,6 +29,10 @@ jobs:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
         with:
           submodules: True
+      - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
+          key: "uv-{% raw %}${{ matrix.runner }}{% endraw %}"
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
           python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
