--- a/template/.github/workflows/contrib.yml.jinja
+++ b/template/.github/workflows/contrib.yml.jinja
@@ -19,7 +19,8 @@ defaults:
   run:
     shell: "pwsh"
 env:
-  SYNC_PY_DISABLE_CI: true
+  UV_CACHE_DIR: ".cache/uv-cache"
+  SYNC_PY_DISABLE_CI: True
 jobs:
   no-spaces-in-path:
     strategy:
@@ -28,14 +29,19 @@ jobs:
           - "macos-13"
           - "ubuntu-22.04"
           - "windows-2022"
+        python: ["{{ python_version }}"]
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
         with:
           submodules: True
+      - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
+          key: "uv-{% raw %}${{ matrix.runner }}{% endraw %}"
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "{{ python_version }}"
+          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
       - run: "scripts/Sync-Py.ps1 -Lock -Version '{{ python_version }}'"
   spaces-in-path:
     strategy:
@@ -44,15 +50,19 @@ jobs:
           - "macos-13"
           - "ubuntu-22.04"
           - "windows-2022"
+      python: ["{{ python_version }}"]
     runs-on: "{% raw %}${{ matrix.runner }}{% endraw %}"
     steps:
       - run: "New-Item -ItemType Directory 'repo path with spaces'"
       - uses: "actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11" # v4.1.1
         with:
           submodules: True
-          path: "repo path with spaces"
+      - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
+        with:
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
+          key: "uv-{% raw %}${{ matrix.runner }}{% endraw %}"          path: "repo path with spaces"
       - uses: "actions/setup-python@0a5c61591373683505ea898e09a3ea4f39ef2b9c" # v5.0.0
         with:
-          python-version: "{{ python_version }}"
+          python-version: "{% raw %}${{ matrix.python }}{% endraw %}"
       - working-directory: "repo path with spaces"
         run: "scripts/Sync-Py.ps1 -Lock -Version '{{ python_version }}'"
