Sync project with own template, fix CI template typos

--- a/template/docs/pyproject.toml.jinja
+++ b/template/docs/pyproject.toml.jinja
@@ -34,6 +34,7 @@ ignore_undeclared = [
 ignore_unused = [
     # ? Core docs tools or declared as extensions in `conf.py`
     "linkify-it-py",
+    "myst-nb",
     "sphinx-autobuild",
     "sphinx-autodoc2",
     "sphinx-book-theme",
