--- a/template/tests/pyproject.toml.jinja
+++ b/template/tests/pyproject.toml.jinja
@@ -27,4 +27,5 @@ ignore_unused = [
     "pytest-cov",
     "pytest-custom-exit-code",
     "pytest-github-actions-annotate-failures",
+    "pytest",
 ]
