--- a/template/scripts/pyproject.toml.jinja
+++ b/template/scripts/pyproject.toml.jinja
@@ -11,7 +11,7 @@ dependencies = ["cyclopts==2.5.0"]
 "{{ project_name }}_tools" = "{{ project_name }}_tools.__main__:main"
 
 [tool.fawltydeps]
-deps = ["scripts/pyproject.toml", "pyproject.toml"]
+deps = ["scripts/pyproject.toml"]
 code = ["scripts/{{ project_name }}_tools"]
 ignore_undeclared = [
     "{{ project_name }}",
