--- a/template/.github/ISSUE_TEMPLATE/feature-request.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/feature-request.yaml.jinja
@@ -1,6 +1,6 @@
 name: "Feature request"
 description: "Request a new feature"
-labels: ["type: enhancement"]
+labels: ["enhancement"]
 body:
   - type: "checkboxes"
     id: "no-duplicate-issues"
