--- a/template/.github/ISSUE_TEMPLATE/bug-report.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/bug-report.yaml.jinja
@@ -1,6 +1,6 @@
 name: "Bug report"
 description: "Report a bug"
-labels: ["type: bug"]
+labels: ["bug"]
 body:
   - type: "checkboxes"
     id: "no-duplicate-issues"
