--- a/template/.github/ISSUE_TEMPLATE/feature-request.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/feature-request.yaml.jinja
@@ -8,7 +8,7 @@ body:
       label: "Please check that this feature hasn't been requested before."
       options:
         - required: True
-          label: "I searched previous feature requests [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label:enhancement+sort:comments-desc) or [here](https://github.com/search?q=repo:{{ project_owner_github_username }}/{{ github_repo_name }}+label:enhancement&type=issues) and didn't find any similar requests."
+          label: "I searched previous feature requests [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label%3Aenhancement+sort%3Acomments-desc) or [here](https://github.com/search?q=repo%3A{{ project_owner_github_username }}/{{ github_repo_name }}+label%3Aenhancement&type=issues) and didn't find any similar requests."
   - type: "textarea"
     id: "feature-description"
     validations:
