--- a/template/.github/ISSUE_TEMPLATE/bug-report.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/bug-report.yaml.jinja
@@ -8,7 +8,7 @@ body:
       label: "Please check that this bug hasn't been reported before."
       options:
         - required: True
-          label: "I searched previous bug reports [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label:bug+sort:comments-desc) or [here](https://github.com/search?q=repo:{{ project_owner_github_username }}/{{ github_repo_name }}+label:bug&type=issues) and didn't find any similar reports."
+          label: "I searched previous bug reports [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label%3Abug+sort%3Acomments-desc) or [here](https://github.com/search?q=repo%3A{{ project_owner_github_username }}/{{ github_repo_name }}+label%3Abug&type=issues) and didn't find any similar reports."
   - type: "checkboxes"
     id: "latest-version"
     attributes:
