--- a/template/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml.jinja
+++ b/template/.github/ISSUE_TEMPLATE/ideas-for-docs.yaml.jinja
@@ -8,7 +8,7 @@ body:
       label: "Please check that this documentation improvement hasn't been requested before."
       options:
         - required: True
-          label: "I searched previous documentation improvement requests [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label:docs+sort:comments-desc) or [here](https://github.com/search?q=repo:{{ project_owner_github_username }}/{{ github_repo_name }}+label:docs&type=issues) and didn't find any similar requests."
+          label: "I searched previous documentation improvement requests [here](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/issues?q=label%3Adocs+sort%3Acomments-desc) or [here](https://github.com/search?q=repo%3A{{ project_owner_github_username }}/{{ github_repo_name }}+label%3Adocs&type=issues) and didn't find any similar requests."
   - type: "textarea"
     id: "feature-description"
     validations:
