Update contributing guide

--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -1,3 +1,11 @@
 # {{ project_name }}
 
 {{ project_description }}
+
+## Contributing
+
+Thank you for considering contributing to `{{ project_name }}`! Please see the [contributing guide](CONTRIBUTING.md) for more details.
+
+> [!IMPORTANT]
+>
+> Opening this repository in VSCode may run a setup script on folder open if you trust the workspace. Please see the detailed disclaimer in the [contributing guide](CONTRIBUTING.md) for more details.
