--- a/template/CONTRIBUTING.md.jinja
+++ b/template/CONTRIBUTING.md.jinja
@@ -3,7 +3,7 @@
 
 # Contributing
 
-Thank you for considering contributing to `{{ project_name }}`! No contribution is too small, even if you are just submitting a Pull Request through the GitHub UI to fix some typos or clarify our language! Before attempting larger changes, please [discuss it with us](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=q-a>) or participate in an [issue](<https://github.com/search?q=repo%3A{{ project_owner_github_username }}/{{ github_repo_name }}?type=issues>) topic.
+Thank you for considering contributing to `{{ project_name }}`! No contribution is too small, even if you are just submitting a Pull Request through the GitHub UI to fix some typos or clarify our language! Before attempting larger changes, please [discuss it with us](<https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/discussions/new?category=q-a>) or participate in the relevant [issue](<https://github.com/search?q=repo%3A{{ project_owner_github_username }}/{{ github_repo_name }}&type=issues>) topic.
 
 This guide gives the high-level details needed for you to jump right in, but links to more detail throughout. Links internal to this guide are marked by ⬇ or ⬆ symbols, which is helpful since back/forward browser navigation is temperamental when it comes to GitHub headings.
 
