--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -8,4 +8,4 @@ Thank you for considering contributing to `{{ project_name }}`! Please see the [
 
 > [!IMPORTANT]
 >
-> Opening this repository in VSCode may run a setup script on folder open if you trust the workspace. Please see the detailed disclaimer in the [contributing guide](CONTRIBUTING.md) for more details.
+> Opening this repository in VSCode may run an automatic task if you trust the workspace. Please see the detailed disclaimer in the [contributing guide](CONTRIBUTING.md) for more details, including how to disable the automatic task.
