--- a/template/pyproject.toml.jinja
+++ b/template/pyproject.toml.jinja
@@ -20,6 +20,11 @@ Tracker = "https://github.com/{{ project_owner_github_username }}/{{ github_repo
 name = "{{ project_owner_name }}"
 {% if project_email %}email = "{{ project_email }}"{% endif %}
 
+[tool.coverage.run]
+branch = true
+source = ["{{ project_name }}"]
+[tool.coverage.report]
+ignore_errors = true
 [tool.fawltydeps]
 deps = ["pyproject.toml"]
 code = ["src"]
@@ -37,11 +42,27 @@ markers = "slow"
 testpaths = "tests"
 xfail_strict = true
 
-[tool.coverage.run]
-branch = true
-source = ["{{ project_name }}"]
-[tool.coverage.report]
-ignore_errors = true
+[tool.towncrier]
+directory = "changelog"
+filename = "CHANGELOG.md"
+template = "changelog/towncrier_template.md.jinja"
+title_format = ""
+issue_format = "[#{issue}](https://github.com/{{ project_owner_github_username }}/{{ github_repo_name }}/{issue})"
+underlines = ["", "", ""]
+[[tool.towncrier.section]]
+path = ""
+[[tool.towncrier.type]]
+directory = "breaking"
+name = "Backwards-incompatible changes"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "deprecation"
+name = "Deprecations"
+showcontent = true
+[[tool.towncrier.type]]
+directory = "change"
+name = "Changes"
+showcontent = true
 
 [tool.pyright]
 exclude = ["**/node_modules", "**/__pycache__", "**/.*", "bin", "submodules"]
@@ -209,15 +230,12 @@ ignore = [
     "TRY003",  # Allow long exception messages
     "W2",      # Allow whitespace issues. Fixed automatically by black.
 ]
-
 [tool.ruff.lint.isort]
 split-on-trailing-comma = false
 [tool.ruff.format]
 skip-magic-trailing-comma = true
-
 [tool.ruff.lint.pydocstyle]
 convention = "google"
-
 [tool.ruff.lint.extend-per-file-ignores]
 "**/*.ipynb" = [
     "B018", # Allow "useless" expressions, which do suppress outputs in notebooks
@@ -235,6 +253,5 @@ convention = "google"
     "SIM300", # Allow constants (expectations) on the RHS
     "SLF001", # Allow private member access in tests
 ]
-
 [tool.ruff.lint.flake8-bugbear]
 extend-immutable-calls = ["typer.Argument", "typer.Option"]
