--- a/template/changelog/towncrier_template.md.jinja.jinja
+++ b/template/changelog/towncrier_template.md.jinja.jinja
@@ -1,4 +1,6 @@
-{% raw %}## [{{ versiondata["version"] }}](https://github.com/blakeNaccarato/copier-python/tree/{{ versiondata["version"] }})
+{% raw %}## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{
+github_repo_name }}{% raw %}/tree/{{
+versiondata["version"] }})
 
 {% for section, _ in sections.items() %}
 {% for category, val in definitions.items() if category in sections[section] %}
@@ -6,7 +8,7 @@
 
 {% for text, values in sections[section][category].items() %}
 - {{ text }}
-  {{ values|join(',\n  ') }}
+{{ values|join(',\n ') }}
 
 {% endfor %}
 {% endfor %}
