--- a/template/.github/workflows/ci.yml.jinja
+++ b/template/.github/workflows/ci.yml.jinja
@@ -27,7 +27,7 @@ jobs:
           submodules: True
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: "${{ env.UV_CACHE_DIR }}"
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
           key: "uv-{% raw %}${{ matrix.runner }}-${{ matrix.python}}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
@@ -46,7 +46,7 @@ jobs:
           submodules: True
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: "${{ env.UV_CACHE_DIR }}"
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
           key: "uv-{% raw %}${{ matrix.runner }}-${{ matrix.python}}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
@@ -65,7 +65,7 @@ jobs:
           submodules: True
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: "${{ env.UV_CACHE_DIR }}"
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
           key: "uv-{% raw %}${{ matrix.runner }}-${{ matrix.python}}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
@@ -92,7 +92,7 @@ jobs:
           submodules: True
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: "${{ env.UV_CACHE_DIR }}"
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
           key: "uv-{% raw %}${{ matrix.runner }}-${{ matrix.python}}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
@@ -127,7 +127,7 @@ jobs:
           submodules: True
       - uses: actions/cache@0c45773b623bea8c8e75f6c82b208c3cf94ea4f9 # v4.0.2
         with:
-          path: "${{ env.UV_CACHE_DIR }}"
+          path: "{% raw %}${{ env.UV_CACHE_DIR }}{% endraw %}"
           key: "uv-{% raw %}${{ matrix.runner }}-${{ matrix.python}}-${{ hashFiles('lock.json') }}{% endraw %}"
       - uses: "actions/setup-python@82c7e631bb3cdc910f68e0081d67478d79c6982d" # v5.1.0
         with:
