--- a/template/README.md.jinja
+++ b/template/README.md.jinja
@@ -2,10 +2,8 @@
 
 {{ project_description }}
 
-## Contributing
+## Project information
 
-Thank you for considering contributing to `{{ project_name }}`! Please see the [contributing guide](CONTRIBUTING.md) for more details.
-
-> [!IMPORTANT]
->
-> Opening this repository in VSCode may run an automatic task if you trust the workspace. Please see the detailed disclaimer in the [contributing guide](CONTRIBUTING.md) for more details, including how to disable the automatic task.
+- [Changes](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/changelog.html>)
+- [Docs](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}>)
+- [Contributing](<https://{{ project_owner_github_username }}.github.io/{{ github_repo_name }}/contributing.html>)
