Fix a few things

--- a/changelog/towncrier_template.md.jinja
+++ b/changelog/towncrier_template.md.jinja
@@ -1,4 +1,11 @@
-## [{{ versiondata["version"] }}](https://github.com/blakeNaccarato/copier-python/tree/{{ versiondata["version"] }})
+{# Built documentation only #}{%- if versiondata["version"] == "main" -%}
+## Changes for the Upcoming Release
+:::{warning}
+These changes reflect the current [development progress](https://github.com/blakeNaccarato/copier-python/tree/main) and have **not** been part of a PyPI release yet.
+:::
+{# CHANGELOG.md entries #}{% else -%}
+## [{{ versiondata["version"] }}](https://github.com/
+{% raw %}## [{{ versiondata["version"] }}](https://github.com/blakeNaccarato/copier-python/tree/{{ versiondata["version"] }})
 
 {% for section, _ in sections.items() %}
 {% for category, val in definitions.items() if category in sections[section] %}
