--- a/template/changelog/towncrier_template.md.jinja.jinja
+++ b/template/changelog/towncrier_template.md.jinja.jinja
@@ -6,7 +6,7 @@ These changes reflect the current [development progress](https://github.com/{% e
 :::
 {# CHANGELOG.md entries #}{% else -%}
 ## [{{ versiondata["version"] }}](https://github.com/
-{% raw %}## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{
+## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{
 github_repo_name }}{% raw %}/tree/{{ versiondata["version"] }})
 
 {% for section, _ in sections.items() %}
