--- a/template/docs/pyproject.toml.jinja
+++ b/template/docs/pyproject.toml.jinja
@@ -10,7 +10,7 @@ dependencies = [
     "linkify-it-py==2.0.3",
     "myst-nb==1.0.0",
     "nbformat==5.10.3",
-    "ruamel-yaml==0.18.6"
+    "ruamel-yaml==0.18.6",
     "sphinx-autobuild==2024.2.4",
     "sphinx-autodoc2==0.5.0",
     "sphinx-book-theme==1.1.2",
@@ -48,3 +48,5 @@ ignore_unused = [
     "sphinxcontrib-mermaid",
     "sphinxcontrib-towncrier"
 ]
+[tool.fawltydeps.custom_mapping]
+ruamel-yaml = ["ruamel"]
