--- a/changelog/towncrier_template.md.jinja
+++ b/changelog/towncrier_template.md.jinja
@@ -4,8 +4,7 @@
 These changes reflect the current [development progress](https://github.com/blakeNaccarato/copier-python/tree/main) and have **not** been part of a PyPI release yet.
 :::
 {# CHANGELOG.md entries #}{% else -%}
-## [{{ versiondata["version"] }}](https://github.com/
-{% raw %}## [{{ versiondata["version"] }}](https://github.com/blakeNaccarato/copier-python/tree/{{ versiondata["version"] }})
+## [{{ versiondata["version"] }}](https://github.com/blakeNaccarato/copier-python/tree/{{ versiondata["version"] }}){% endif %}
 
 {% for section, _ in sections.items() %}
 {% for category, val in definitions.items() if category in sections[section] %}
