--- a/template/changelog/towncrier_template.md.jinja.jinja
+++ b/template/changelog/towncrier_template.md.jinja.jinja
@@ -1,13 +1,10 @@
 {% raw %}{# Built documentation only #}{%- if versiondata["version"] == "main" -%}
 ## Changes for the Upcoming Release
 :::{warning}
-These changes reflect the current [development progress](https://github.com/{% endraw %}{{ project_owner_github_username
-}}/{{ github_repo_name }}{% raw %}/tree/main) and have **not** been part of a PyPI release yet.
+These changes reflect the current [development progress](https://github.com/{% endraw %}{{ project_owner_github_username}}/{{ github_repo_name }}{% raw %}/tree/main) and have **not** been part of a PyPI release yet.
 :::
 {# CHANGELOG.md entries #}{% else -%}
-## [{{ versiondata["version"] }}](https://github.com/
-## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{
-github_repo_name }}{% raw %}/tree/{{ versiondata["version"] }})
+## [{{ versiondata["version"] }}](https://github.com/{% endraw %}{{ project_owner_github_username }}/{{github_repo_name }}{% raw %}/tree/{{ versiondata["version"] }}){% endif %}
 
 {% for section, _ in sections.items() %}
 {% for category, val in definitions.items() if category in sections[section] %}
